# QIssueReporter

./: .gitignore  README.md  pyproject.toml
qissuereporter/: __init__.py  __main__.py  api.py  models.py  utils.py
qissuereporter/creator/: bug_report.ui  main_window.py  report_widget.py  text_edit.py
qissuereporter/image_view/: image_viewer.py  screenshot_mini.py
qissuereporter/viewer/: main_window.py  viewer.py  viewer.ui  viewer_content.py  viewer_content.ui
